[package]
name = "hasher"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
colored = "2.1.0"
spinoff = { version = "0.8.0", features = ["line"] }
walkdir = "2.5.0"
regex-lite = "0.1.6"
encoding_rs = "0.8.35"
